changed image path to solve img not loading issue

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
   
       <div class="choices">
         <div class="choice" id="Rock">
-          <img src="/images/rock.png" alt="rock hand sign">
+          <img src="images/rock.png" alt="rock hand sign">
         </div>
         <div class="choice" id="Paper">
-          <img src="/images/paper.png" alt="paper hand sign">
+          <img src="images/paper.png" alt="paper hand sign">
         </div>
         <div class="choice" id="Scissors">
-          <img src="/images/scissors.png" alt="scissors hand sign">
+          <img src="images/scissors.png" alt="scissors hand sign">
         </div>
       </div>
   
